--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,57 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
 title: Bivil M Jacob
-email: bivilj@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: bivil
-github_username:  bivil
+description: My Personal Blog
+author: Bivil M Jacob
+logo: http://bivilmjacob.com/hcz-jekyll-blog/static/img/avatar.png
+github: https://github.com/bivil
+about: RoR developer
+disqus_shortname: aboutashu
+google_analytics: UA-72862926-1
+urls:
+    - text: Home
+      url: /
+      icon: fa-home
+      layout: post
+    - text: About
+      url: /about/
+      icon: fa-comments
+    - text: Projects
+      url: /projects/
+      icon: fa-desktop
+    - text: Resume
+      url: '#'
+      icon: fa-graduation-cap
+    - text: Github
+      url: https://github.com/ashutosh2k12
+      icon: fa-github
 
-# Build settings
+social:
+    - icon: fa-facebook
+      link: 'https://www.facebook.com/Bivil.M.Jacob'
+    - icon: fa-skype
+      link: '#'
+    - icon: fa-twitter
+      link: '#'
+    - icon: fa-linkedin
+      link: '#'
+    - icon: fa-stack-exchange
+      link: '#'
+
+share:
+  twitter_username: \#
+  fb_appid: 000000000000
+
+
+enableTags: true
+tagarray: []
+
+url: "http://bivilmjacob.com/"
+# url: "/bivilmj_blog"
+# baseurl: "/hcz-jekyll-blog"
+baseurl: "/bivilmj_blog"
+paginate: 20
+per_page: 20
+paginate_path: "/page:num/"
 markdown: kramdown
+gems:
+  - jekyll-paginate
+  - jekyll-gist
