--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Bivil M Jacob
 description: My Personal Blog
 author: Bivil M Jacob
-logo: http://bivilmjacob.com/hcz-jekyll-blog/static/img/avatar.png
+logo: http://bivilmjacob.com/static/img/avatar.png
 github: https://github.com/bivil
 about: RoR developer
 # disqus_shortname: aboutashu
