new theme test6, social profile links

--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,9 @@ social:
     - icon: fa-skype
       link: '#'
     - icon: fa-twitter
-      link: '#'
+      link: 'https://twitter.com/Bivil'
     - icon: fa-linkedin
-      link: '#'
+      link: 'https://in.linkedin.com/in/bivil-m-jacob-87110b59'
     - icon: fa-stack-exchange
       link: '#'
 
